--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
 
 <div class="cover">
-    <div class="container header">
+    <div class="container header" style="padding: 100px 0 0px 0px;">
       <div class="row row-margin">
         <div class="col-sm-12">
         <h1 class="text-center color">Caesars Cipher</h1>
